Fix passing callbacks as constructor args

https://bugzilla.gnome.org/show_bug.cgi?id=617551