gi/pygi-callbacks.h
@@ -34,6 +34,7 @@ gboolean _pygi_scan_for_callbacks (GIFunctionInfo *self,
 
 gboolean _pygi_create_callback (GIFunctionInfo *self,
                                 gboolean       is_method,
+                                gboolean       is_constructor,
                                 int            n_args,
                                 Py_ssize_t     py_argc,
                                 PyObject      *py_argv,
